--- a/FreeTime.html
+++ b/FreeTime.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html>
     <h1> This is a Fresh Git Repository.</h1>
+    <p>
+        The paragraph is written to check the difference from previous version.
+    </p>
 </html>
