Some more Changes

--- a/FreeTime.html
+++ b/FreeTime.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <h1> This is a Fresh Git Repository.</h1>
+    <div>
+        <p>Working with GitHub</p>
+    </div>
+    <div>
+        <p> Take a look at this work</p>
+    </div>
     <p>
         The paragraph is written to check the difference from previous version.
     </p>
