--- a/FreeTime.html
+++ b/FreeTime.html
@@ -7,6 +7,9 @@
     <div>
         <p> Take a look at this work</p>
     </div>
+     <div>
+        <p> Editing from Github</p>
+    </div>
     <p>
         The paragraph is written to check the difference from previous version.
     </p>
