Add Comments in FreeTime.html
Adding some comment to check tracking

--- a/FreeTime.html
+++ b/FreeTime.html
@@ -13,4 +13,5 @@
     <p>
         The paragraph is written to check the difference from previous version.
     </p>
+    <!--Some Faaltu Comments-->
 </html>
