Changes to FreeTime.html file
To check something new

--- a/FreeTime.html
+++ b/FreeTime.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<body>
     <h1> This is a Fresh Git Repository.</h1>
     <div>
         <p>Working with GitHub</p>
@@ -7,11 +9,13 @@
     <div>
         <p> Take a look at this work</p>
     </div>
-     <div>
+    <div>
         <p> Editing from Github</p>
     </div>
     <p>
         The paragraph is written to check the difference from previous version.
     </p>
     <!--Some Faaltu Comments-->
+</body>
+
 </html>
