--- a/FreeTime.html
+++ b/FreeTime.html
@@ -26,8 +26,8 @@
 
 <body>
     <div class="container">
-       
-        
+
+
 
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -82,8 +82,10 @@
             <p> Editing from Github</p>
 
         </div>
+        <h6> Adding a header from VS code.</h6>
     </div>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
